--- a/.github/workflows/looker_script.yml
+++ b/.github/workflows/looker_script.yml
@@ -28,4 +28,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add results.txt
           git diff --staged --quiet || git commit -m "Update results"
-          git push
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/AlexandKomarov/bigfish_looker_sdk.git
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
