--- a/.github/workflows/looker_script.yml
+++ b/.github/workflows/looker_script.yml
@@ -1,31 +1,44 @@
 name: Run Looker Script
 on:
   schedule:
-    - cron: '0 15 * * *' # Run every day at 15:00 UTC
+    - cron: '0 15 * * *'  # Daily run at 15:00 UTC
   workflow_dispatch:
+
 jobs:
   run_script:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install looker_sdk
-      - name: Run script and save results
+
+      - name: Run script and save results in Markdown
         run: python big_fish_looker_sdk.py
         env:
           LOOKERSDK_BASE_URL: ${{ secrets.BASE_URL }}
           LOOKERSDK_CLIENT_ID: ${{ secrets.CLIENT_ID }}
           LOOKERSDK_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+
+      - name: Upload results as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Results
+          path: results.md
+
       - name: Commit and push if changes
         run: |
           git config --global user.email "Alex.Komarov-ext@bigfishgames.com"
           git config --global user.name "GitHub Actions"
-          git add results.txt
-          git diff --staged --quiet || git commit -m "Update results"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/AlexandKomarov/bigfish_looker_sdk.git
+          git add results.md  
+          git commit -m "Update results" -a || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
