--- a/.github/workflows/looker_script.yml
+++ b/.github/workflows/looker_script.yml
@@ -1,7 +1,7 @@
 name: Run Looker Script
 on:
   schedule:
-    - cron: '30 18 * * *'  # Daily run at 15:00 UTC
+    - cron: '0 15 * * *'  # Daily run at 15:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -46,4 +46,4 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALEX }}
         run: |
           README_CONTENT="${{ steps.readme_content.outputs.content }}"
-          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Workflow for Puzzle and Passport is complete. Check the results:\\n$README_CONTENT\"}" $SLACK_WEBHOOK_URL
+          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Workflow is complete. Check the results:\\n$README_CONTENT\"}" $SLACK_WEBHOOK_URL
