--- a/.github/workflows/looker_script.yml
+++ b/.github/workflows/looker_script.yml
@@ -33,7 +33,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add result.txt  
           git commit -m "Update results" -a || echo "No changes to commit"
-          git push
+          git pull --rebase 
+          git push --force-with-lease origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
