--- a/.github/workflows/cooking_craze.yml
+++ b/.github/workflows/cooking_craze.yml
@@ -1,4 +1,4 @@
-name: Run Looker Script
+name: Run Looker Script for Cooking Craze
 on:
   schedule:
     - cron: '0 14 * * *'  # Daily run at 14:00 UTC
@@ -20,8 +20,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install looker_sdk
 
-      - name: Run script and save results in Markdown and txt
-        run: python big_fish_looker_sdk.py
+      - name: Run script and save results in txt
+        run: python scripts/cooking_craze.py
         env:
           LOOKERSDK_BASE_URL: ${{ secrets.BASE_URL }}
           LOOKERSDK_CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -31,20 +31,20 @@ jobs:
         run: |
           git config --global user.email "Alex.Komarov-ext@bigfishgames.com"
           git config --global user.name "GitHub Actions"
-          git add result.txt  
+          git add results/cooking_craze_result.txt
           git commit -m "Update results" -a || echo "No changes to commit"
           git pull --rebase 
           git push --force-with-lease origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Read result.txt content
+      - name: Read cooking_craze_result.txt content
         id: readme_content
-        run: echo "::set-output name=content::$(cat result.txt | sed 's/$/\\n/g' | tr -d '\n')"
+        run: echo "::set-output name=content::$(cat results/cooking_craze_result.txt | sed 's/$/\\n/g' | tr -d '\n')"
 
-      - name: Notify Slack with result.txt content
+      - name: Notify Slack with cooking_craze_result.txt content
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_LOOKER_SDK_REVIEW }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALEX }}
         run: |
           README_CONTENT="${{ steps.readme_content.outputs.content }}"
           curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Workflow is complete. Check the results:\\n$README_CONTENT\"}" $SLACK_WEBHOOK_URL
