--- a/.github/workflows/manta_ray.yml
+++ b/.github/workflows/manta_ray.yml
@@ -1,7 +1,7 @@
 name: Run Looker Script for Manta Ray
 on:
   schedule:
-    - cron: '45 14 * * *'  # Daily run at 14:45 UTC
+    - cron: '0 16 * * *'  # Daily run at 16:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
           pip install looker_sdk
 
       - name: Run script and save results in txt
-        run: python scripts/executive_kpi.py
+        run: python scripts/manta_ray.py
         env:
           LOOKERSDK_BASE_URL: ${{ secrets.BASE_URL }}
           LOOKERSDK_CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -31,18 +31,18 @@ jobs:
         run: |
           git config --global user.email "Alex.Komarov-ext@bigfishgames.com"
           git config --global user.name "GitHub Actions"
-          git add results/executive_kpi_result.txt  
+          git add results/manta_ray_result.txt
           git commit -m "Update results" -a || echo "No changes to commit"
           git pull --rebase 
           git push --force-with-lease origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Read executive_kpi_result.txt content
+      - name: Read manta_ray_result.txt content
         id: readme_content
-        run: echo "::set-output name=content::$(cat results/executive_kpi_result.txt | sed 's/$/\\n/g' | tr -d '\n')"
+        run: echo "::set-output name=content::$(cat results/manta_ray_result.txt | sed 's/$/\\n/g' | tr -d '\n')"
 
-      - name: Notify Slack with executive_kpi_result.txt content
+      - name: Notify Slack with manta_ray_result.txt content
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALEX }}
         run: |
