--- a/.github/workflows/evermerge.yml
+++ b/.github/workflows/evermerge.yml
@@ -1,7 +1,7 @@
 name: Run Looker Script for Evermerge
 on:
   schedule:
-    - cron: '45 15 * * *'  # Daily run at 15:45 UTC
+    - cron: '15 17 * * *'  # Daily run at 17:15 UTC
   workflow_dispatch:
 
 jobs:
@@ -44,7 +44,7 @@ jobs:
 
       - name: Notify Slack with evermerge_result.txt content
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALEX }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_LOOKER_SDK_REVIEW }}
         run: |
           README_CONTENT="${{ steps.readme_content.outputs.content }}"
           curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Workflow Evermerge. Check the results:\\n$README_CONTENT\"}" $SLACK_WEBHOOK_URL
