--- a/.github/workflows/ultimate_susvivors.yml
+++ b/.github/workflows/ultimate_susvivors.yml
@@ -1,7 +1,7 @@
 name: Run Looker Script for Ultimate Survivors
 on:
   schedule:
-    - cron: '30 15 * * *'  # Daily run at 15:30 UTC
+    - cron: '30 16 * * *'  # Daily run at 16:30 UTC
   workflow_dispatch:
 
 jobs:
@@ -44,7 +44,7 @@ jobs:
 
       - name: Notify Slack with ultimate_survivors_result.txt content
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALEX }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_LOOKER_SDK_REVIEW }}
         run: |
           README_CONTENT="${{ steps.readme_content.outputs.content }}"
           curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Workflow Ultimate Survivors. Check the results:\\n$README_CONTENT\"}" $SLACK_WEBHOOK_URL
